--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "concurrently": "^6.4.0"
   },
   "scripts": {
-    "start": "concurrently \"cd client; npm start\" \"cd server; npm run dev\""
+    "start": "concurrently \"cd client; npm start\" \"cd server; npm run dev\"",
+    "test:server": "cd server; npm test"
   }
 }
