--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,22 @@
     "private": true,
     "scripts": {
         "start": "node server.js",
-        "dev": "nodemon"
+        "dev": "nodemon",
+        "test": "mocha src/*"
     },
     "dependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-preset-env": "^1.7.0",
         "debug": "~2.6.9",
         "dotenv": "^10.0.0",
         "express": "~4.16.1",
+        "mocha": "^9.1.3",
         "mongoose": "^6.1.1"
-},
+    },
     "devDependencies": {
-        "nodemon": "^2.0.15"
+        "chai": "^4.3.4",
+        "nodemon": "^2.0.15",
+        "superagent": "^6.1.0",
+        "supertest": "^6.1.6"
     }
 }
