--- a/server/package.json
+++ b/server/package.json
@@ -10,14 +10,18 @@
     "dependencies": {
         "babel-cli": "^6.26.0",
         "babel-preset-env": "^1.7.0",
+        "bcrypt": "^5.0.1",
         "debug": "~2.6.9",
         "dotenv": "^10.0.0",
         "express": "~4.16.1",
+        "jsonwebtoken": "^8.5.1",
         "mocha": "^9.1.3",
         "mongoose": "^6.1.1"
     },
     "devDependencies": {
         "chai": "^4.3.4",
+        "faker": "^5.5.3",
+        "mongodb-memory-server": "^8.0.4",
         "nodemon": "^2.0.15",
         "superagent": "^6.1.0",
         "supertest": "^6.1.6"
