--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,11 @@
     "dependencies": {
         "babel-cli": "^6.26.0",
         "babel-preset-env": "^1.7.0",
-        "bcrypt": "^5.0.1",
+        "bcryptjs": "^2.4.3",
         "debug": "~2.6.9",
         "dotenv": "^10.0.0",
         "express": "~4.16.1",
+        "express-validator": "^6.14.0",
         "jsonwebtoken": "^8.5.1",
         "mocha": "^9.1.3",
         "mongoose": "^6.1.1"
