--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "start": "node server.js",
         "dev": "nodemon",
-        "test": "mocha src/*"
+        "test": "jest --detectOpenHandles"
     },
     "dependencies": {
         "babel-cli": "^6.26.0",
@@ -16,12 +16,11 @@
         "express": "~4.16.1",
         "express-validator": "^6.14.0",
         "jsonwebtoken": "^8.5.1",
-        "mocha": "^9.1.3",
         "mongoose": "^6.1.1"
     },
     "devDependencies": {
-        "chai": "^4.3.4",
         "faker": "^5.5.3",
+        "jest": "^27.4.5",
         "mongodb-memory-server": "^8.0.4",
         "nodemon": "^2.0.15",
         "superagent": "^6.1.0",
