--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
         "babel-cli": "^6.26.0",
         "babel-preset-env": "^1.7.0",
         "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "debug": "~2.6.9",
         "dotenv": "^10.0.0",
