--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "bloghouse",
+  "name": "bamboo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "concurrently": "^6.4.0"
   },
   "scripts": {
-    "start": "concurrently \"cd client; npm start\" \"cd server; npm run dev\"",
+    "start": "concurrently \"cd client; npm start\" \"cd server; npm start\"",
     "test:server": "cd server; npm test"
   }
 }
