added node version

--- a/server/package.json
+++ b/server/package.json
@@ -27,5 +27,8 @@
         "nodemon": "^2.0.15",
         "superagent": "^6.1.0",
         "supertest": "^6.1.6"
+    },
+    "engines": {
+        "node": "14.18.1"
     }
 }
